--- a/src/index.css
+++ b/src/index.css
@@ -40,16 +40,7 @@ select:focus {
   outline-offset: 2px;
 }
 
-/* HOMEPAGE */
-.homepage {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
-  padding: 2rem;
-  gap: 10rem;
-}
-
+/* Navbar */
 header {
   position: absolute;
   top: 0;
@@ -64,6 +55,12 @@ header {
 
 header h1 {
   font-size: 2.5rem;
+}
+
+.navbar-menu {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
 .setting {
@@ -89,6 +86,16 @@ header button {
 .icon:hover {
   transform: scale(1.2);
   transition: all ease 0.2s;
+}
+
+/* HOMEPAGE */
+.homepage {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  padding: 2rem;
+  gap: 10rem;
 }
 
 .user-profile {
